--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,27 @@
             <version>2.10.1</version>
         </dependency>
 
+        <!-- JFreeChart -->
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.5.4</version>
+        </dependency>
+
+        <!-- JCommon (зависимость JFreeChart) -->
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jcommon</artifactId>
+            <version>1.0.24</version>
+        </dependency>
+
+        <!-- JFreeChart FX (для интеграции с JavaFX) -->
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart-fx</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+
         <!-- ? -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
