--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.KIPiA.Management</groupId>
     <artifactId>KIPiA_Management</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.2</version>
     <name>KIPiA_Management</name>
     <packaging>jar</packaging>
 
@@ -105,6 +105,20 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.18.0</version>
+        </dependency>
+
+        <!-- Maven Model
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-model</artifactId>
+            <version>3.9.6</version>
+        </dependency>-->
+
+        <!-- XPP3 reader для парсинга XML -->
+        <dependency>
+            <groupId>org.codehaus.plexus</groupId>
+            <artifactId>plexus-utils</artifactId>
+            <version>3.4.1</version>
         </dependency>
     </dependencies>
 
